tests/More/Bad/2.tig
/* Type mismatch */
false | 9


